# Recall

./: .dockerignore  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-COMMERCIAL.md  README.md  SECURITY.md  _socials_patch.ps1  _socials_patch2.ps1  pyproject.toml  server.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  pages.yml  python-sdk.yml  release-python-sdk.yml  release-ts-sdk.yml  test.yml  ts-sdk.yml
agent-os/: .gitignore  LICENSE  README.md  bootstrap.ps1  config.example.json  install.sh
agent-os/brain/: Dockerfile  README.md  agency_sidecar_patch.md  docker-compose.yml  recall.py
agent-os/docs/: QUICKSTART.md
agent-os/templates/: 00-routing.md.tmpl  REVIVAL-template.md  audit-trail.md.tmpl  fix-at-root-reflex.md.tmpl
assets/: make-logo.py
clients/python/: README.md  pyproject.toml  smoke_live.py
clients/python/recall_client/: __init__.py  async_client.py  client.py  exceptions.py  models.py  py.typed
clients/python/tests/: test_client.py
clients/typescript/: .gitignore  README.md  package-lock.json  package.json  smoke_live.ts  tsconfig.json
clients/typescript/src/: client.ts  errors.ts  index.ts  types.ts
clients/typescript/tests/: client.test.ts
docker/: README.md
docker/single-tenant/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: architecture.md  byo-models.md  claude-desktop-quickstart.md  gated-workstreams.md  license-boundary.md  mcp.md  outside-counsel-checklist.md  quickstart.md  releasing-sdks.md
docs/conventions/: branding.md  cold-start-ritual.md
examples/: README.md
examples/bash/: curl_round_trip.sh
examples/python/: agent_memory.py
examples/typescript/: agent_memory.ts  package.json  tsconfig.json
site/: CNAME  README.md  _mockup.html  architecture.html  brain.html  comparison.html  hardware.html  index-test.html  index.html  pillars.html  quickstart.html  robots.txt  sitemap.xml  whitepaper.html
site/assets/: _render-banner.html  _render-profile.html  site.css
src/recall/: __init__.py  __main__.py  app.py  artifacts.py  auth.py  chunking.py  config.py  embedder.py  git_sync.py  license.py  mcp_stdio.py  snapshot.py  state.py  store.py  summarizer.py
src/recall/tools/: __init__.py  answer.py  backfill.py  checkpoint.py  coordinate.py  maintenance.py  recall.py  recall_filtered.py  reflect.py  reindex.py  remember.py  stats.py
src/recall/transport/: __init__.py  http.py  mcp_sse.py
tests/: conftest.py  fakestore.py  test_no_oss_to_enterprise_imports.py
tests/unit/: test_answer.py  test_auth.py  test_byo_models.py  test_chunking.py  test_coordinate.py  test_imports.py  test_license.py  test_recall_filtered.py  test_tools.py
tools/: issue_license.py
