# @wbx-modified copilot-a3f7·MTN | 2026-04-24 | Python SDK packaging | prev: NEW
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recall-client"
version = "0.1.0"
description = "Official Python client for Recall — open-source memory for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "RecallWorks contributors", email = "maintainers@recall.works" }]
keywords = ["mcp", "memory", "ai-agents", "llm", "vector-search", "recall"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/RecallWorks/Recall"
Documentation = "https://github.com/RecallWorks/Recall/tree/main/clients/python"
Repository = "https://github.com/RecallWorks/Recall"
Issues = "https://github.com/RecallWorks/Recall/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["recall_client"]

[tool.hatch.build.targets.sdist]
include = ["recall_client/**", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
